# KRunner-Plasmoid

./: .gitignore  CMakeLists.txt  MODIFIED  README.md
lib/gtest-1.8.0/googlemock/include/gmock/: gmock-spec-builders.h
plasmoid/: metadata.desktop
plasmoid/contents/ui/: KRunnerDialog.qml  KRunnerItem.qml  MainMenu.qml  RunCommand.qml  main.qml
plugins/: CMakeLists.txt  qmldir
plugins/src/: ApplicationLauncher.cpp  ApplicationLauncher.hpp  History.cpp  History.hpp  HistoryEntry.cpp  HistoryEntry.hpp  PlasmoidPlugin.cpp  PlasmoidPlugin.hpp  QProcessWrapper.hpp  QProcessWrapperImpl.cpp  QProcessWrapperImpl.hpp  ShortcutHandler.cpp  ShortcutHandler.hpp  config.hpp
plugins/tests/: ApplicationLauncherTest.cpp  GTestWidget.cpp  GTestWidget.hpp  HistoryTest.cpp  main.cpp
